--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "react": "^19.0.0",
+        "react-app-polyfill": "^3.0.0",
         "react-dom": "^19.0.0"
     }
 }
