--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.22.0",
         "eslint-plugin-react-hooks": "^5.2.0",
+        "sass-embedded": "^1.85.1",
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.26.0",
         "vite": "^6.2.1"
