--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "jest --passWithNoTests",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:clear": "jest --clearCache && jest"
     },
-    "keywords": [
-        "morse-code"
-    ],
+    "keywords": [],
     "author": "Brian Ujiie",
     "license": "MIT",
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.3",
+        "@types/jest": "^29.5.14",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.22.0",
         "eslint-plugin-react-hooks": "^5.2.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "sass-embedded": "^1.85.1",
+        "ts-jest": "^29.3.0",
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.26.0",
         "vite": "^6.2.1"
@@ -28,5 +35,34 @@
         "react": "^19.0.0",
         "react-app-polyfill": "^3.0.0",
         "react-dom": "^19.0.0"
+    },
+    "jest": {
+        "roots": [
+            "<rootDir>/src",
+            "<rootDir>/tests"
+        ],
+        "moduleDirectories": [
+            "node_modules",
+            "src"
+        ],
+        "testMatch": [
+            "<rootDir>/tests/**/*.test.ts",
+            "<rootDir>/tests/**/*.test.tsx"
+        ],
+        "transform": {
+            "^.+\\.tsx?$": "ts-jest"
+        },
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ],
+        "setupFilesAfterEnv": [
+            "<rootDir>/jest-setup.ts"
+        ],
+        "testEnvironment": "node"
     }
 }
