--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "test": "jest --passWithNoTests",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
-        "test:clear": "jest --clearCache && jest"
+        "test:clear": "jest --clearCache && jest",
+        "test:vi": "vitest",
+        "test:viui": "vitest --ui",
+        "test:vicoverage": "vitest run --coverage"
     },
     "keywords": [],
     "author": "Brian Ujiie",
@@ -21,6 +24,7 @@
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
+        "@vitest/ui": "^3.0.9",
         "eslint": "^9.22.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "jest": "^29.7.0",
@@ -29,7 +33,8 @@
         "ts-jest": "^29.3.0",
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.26.0",
-        "vite": "^6.2.1"
+        "vite": "^6.2.1",
+        "vitest": "^3.0.9"
     },
     "dependencies": {
         "react": "^19.0.0",
