--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "dependencies": {
         "react": "^18.3.0",
         "react-app-polyfill": "^3.0.0",
-        "react-dom": "^18.3.0"
+        "react-dom": "^18.3.0",
+        "vite-plugin-svgr": "^4.3.0"
     },
     "jest": {
         "roots": [
